objects/TargetedCountriesHeadCount__c.object
<CustomObject>
    <fields>
        <fullName>AccountGrowthInitiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Growth Initiative</label>
        <referenceTo>AccountGrowthInitiative__c</referenceTo>
        <relationshipLabel>Targeted Countries Head Counts</relationshipLabel>
        <relationshipName>TargetedCountriesHeadCounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>SFE_AccPlan__c</referenceTo>
        <relationshipLabel>Targeted Countries Head Counts</relationshipLabel>
        <relationshipName>TargetedCountriesHeadCounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentYear__c</fullName>
        <label>Current Year</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMRBusinessUnit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GMRBusinessUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_UniqueBU__c</fullName>
        <label>TECH_UniqueBU</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TargetedCountry__c</fullName>
        <label>Ambition</label>
        <referenceTo>TargetedCountries__c</referenceTo>
        <relationshipLabel>Targeted Countries Head Counts</relationshipLabel>
        <relationshipName>TargetedCountriesHeadCounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>V1V2__c</fullName>
        <label>V1/V2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>V1</fullName>
                </value>
                <value>
                    <fullName>V2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year1__c</fullName>
        <label>Year +1</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year2__c</fullName>
        <label>Year +2</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year3__c</fullName>
        <label>Year +3</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Targeted Countries Head Count</label>
    <nameField>
        <displayFormat>HC-{0000}</displayFormat>
        <label>Targeted Countries Head Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targeted Countries Head Counts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TCH_VR_R217SLS03_CheckNegativeHeadCounts</fullName>
        <active>true</active>
        <errorConditionFormula>OR( CurrentYear__c&lt;0, Year1__c&lt;0,Year2__c&lt;0,Year3__c&lt;0) &amp;&amp;  NOT( $User.BypassVR__c )</errorConditionFormula>
        <errorMessage>Head Counts cannot be negative</errorMessage>
    </validationRules>
</CustomObject>